--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/vue": "^1.0.5",
+    "@heroicons/vue": "^1.0.6",
     "vue": "^3.2.23",
     "vue-router": "^4.0.12"
   },
@@ -15,7 +15,10 @@
     "@vitejs/plugin-vue": "^1.10.2",
     "@vue/cli-plugin-router": "~4.5.0",
     "autoprefixer": "^10.4.0",
+    "node-sass": "^7.0.1",
     "postcss": "^8.4.4",
+    "prettier": "^2.6.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.0",
     "vite": "^2.7.0"
   }
