--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8.4.4",
     "prettier": "^2.6.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
+    "sass": "^1.49.10",
     "tailwindcss": "^3.0.0",
     "vite": "^2.7.0"
   }
